Fixing issue 6361: Mkt/Eng- Manager Data Grid Table Title Columns and Data columns are distorted in firefox

--- a/UI/WebContent/css/mkttable.css
+++ b/UI/WebContent/css/mkttable.css
@@ -72,7 +72,7 @@ width: 100%;
     background-color: #ffffff;
     color: #222;
     font-size: 1.1em;
-    padding-right: 17px;
+    padding-right: 1.8%;
 }
 #gridNormal1 .tableHeader
 {
